src/Services/sparshServices/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sparsh
  labels:
    app.kubernetes.io/part-of: sparsh-platform
